Book Search added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-    <string name="app_name">BooksApp</string>
-    <string name="loading">Loading...</string>
+    <string name="app_name">Books</string>
+    <string name="loading">Loading…</string>
     <string name="loading_failed">Loading failed</string>
     <string name="retry">Retry</string>
     <string name="content_description">Content Description</string>
+    <string name="search_title">"Search "</string>
+    <string name="favorites_title">Favorites</string>
+    <string name="details_title">Book details</string>
 </resources>
