--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="categories_title">Categories</string>
     <string name="favorites_title">Favorites</string>
     <string name="details_title">Book details</string>
+    <string name="favorites_is_empty">You do not have any favorite books</string>
 </resources>
