--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="favorites_title">Favorites</string>
     <string name="details_title">Book details</string>
     <string name="favorites_is_empty">You do not have any favorite books</string>
+    <string name="preview">Open in browser</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites\n</string>
 </resources>
